--- a/MameToppleApi/appsettings.json
+++ b/MameToppleApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtSettings":{
+    "Issuer":"JwtAuthDeom",
+    "SignKey":"1Zl4h9703IzROikK3@uK&&OEb"
+  },
   "AllowedHosts": "*"
 }
