--- a/MameToppleApi/MameToppleApi.csproj
+++ b/MameToppleApi/MameToppleApi.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-rc.1.20451.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.Composition" Version="1.4.1" />
   </ItemGroup>
 </Project>
