feat:新增連接資料庫Model、CRUDCrontroller樣板、IRepository

--- a/MameToppleApi/appsettings.json
+++ b/MameToppleApi/appsettings.json
@@ -10,5 +10,9 @@
     "Issuer":"JwtAuthDeom",
     "SignKey":"1Zl4h9703IzROikK3@uK&&OEb"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings":{
+    "ToppleDBContext":"Data Source=tuppledb.database.windows.net;Initial Catalog=ToppleDB;Persist Security Info=True;User ID=MameAdmin;Password=5,Z,L>=y"
+  }
 }
