--- a/MameToppleApi/MameToppleApi.csproj
+++ b/MameToppleApi/MameToppleApi.csproj
@@ -32,5 +32,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MameVue\src\assets\css\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 </Project>
